overflow-fix#2

--- a/malhar-website/css/style.css
+++ b/malhar-website/css/style.css
@@ -405,7 +405,7 @@ nav {
 
 .collapse{
   overflow-x: hidden;
-
+  overflow-y: hidden;
   height: 0vh;
   width: 100vw;
   background-color: #111111;
